// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id int [pk, increment]
  email varchar [unique, not null]
  password_hash varchar [not null]
  roles varchar [not null]
  is_active boolean [not null, default: true]
  is_verified boolean [not null, default: false]
  created_at datetime [not null]
  updated_at datetime [not null]
  created_by int
  updated_by int
}

Table themes {
  id int [pk, increment]
  title varchar [not null]
  description text [not null]
  slug varchar [unique, not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  created_by int
  updated_by int
}

Table cursus {
  id int [pk, increment]
  theme_id int [not null, ref: > themes.id]
  title varchar [not null]
  description text
  price int [not null] // cents 2600 = 26€
  is_active boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
  created_by int
  updated_by int
}

Table lessons {
  id int [pk, increment]
  cursus_id int [not null, ref: > cursus.id]
  title varchar [not null]
  content text [not null]
  video_url varchar
  position int [not null] //order in cursus
  price int [not null] // cents 5000 = 50€
  is_active boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
  created_by int
  updated_by int
}

Table purchases {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  cursus_id int [ref: > cursus.id]
  lesson_id int [ref: > lessons.id]
  amount int [not null]
  currency varchar [not null, default: "EUR"]
  status varchar [not null] // PENDING | PAID | CANCELED
  stripe_session_id varchar
  created_at datetime [not null]
  updated_at datetime [not null]
  created_by int
  updated_by int

  Indexes {
    (user_id)
    (cursus_id)
    (lesson_id)
    (stripe_session_id) [unique]
  }
}

Table access_rights {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  cursus_id int [ref: > cursus.id]
  lesson_id int [ref: > lessons.id]
  granted_at datetime [not null]
  purchase_id int [ref: > purchases.id]
  created_at datetime [not null]
  updated_at datetime [not null]
  created_by int
  updated_by int

  Indexes {
    (user_id)
    (cursus_id)
    (lesson_id)
    (user_id, cursus_id) [unique]
    (user_id, cursus_id) [unique]
  }
}

Table lesson_validations {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  lesson_id int [not null, ref: > lessons.id]
  validated_at datetime [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  created_by int
  updated_by int

  Indexes {
    (user_id, lesson_id) [unique]
  }
}

Table cursus_validations {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  cursus_id int [not null, ref: > cursus.id]
  validated_at datetime [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  created_by int
  updated_by int

  Indexes {
    (user_id, cursus_id) [unique]
  }
}

Table certifications {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  theme_id int [not null, ref: > themes.id]
  validated_at datetime [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  created_by int
  updated_by int

  Indexes {
    (user_id, theme_id) [unique]
  }
}